tarpc/tests/compile_fail/tokio/must_use_channel_executor.stderr
error: unused `TokioChannelExecutor` that must be used
  --> tests/compile_fail/tokio/must_use_channel_executor.rs:27:9
   |
27 |         server.execute(HelloServer.serve());
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> tests/compile_fail/tokio/must_use_channel_executor.rs:25:12
   |
25 |     #[deny(unused_must_use)]
   |            ^^^^^^^^^^^^^^^
help: use `let _ = ...` to ignore the resulting value
   |
27 |         let _ = server.execute(HelloServer.serve());
   |         +++++++
